--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,48 +16,80 @@
 
   <body>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+<nav class="navigation">
+  <a class = "button" href="">Services </a>
+  <a class = "button" href="">Product</a>
+  <a class = "button" href="">Vision</a>
+  <a class = "button" href="">Features</a>
+  <a class = "button" href="">About</a>
+  <a class = "button" href="">Contact</a>
 
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
-
-  Get Started
-
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </nav>
 
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <header class="header">
+    <div class="box">
+    <h1>
+      Innovation<br>
+      On<br>
+      Demand
+    </h1>
+    <a class="button">Get Started</a>
+    </div>
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+
+    <div class= "box">
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+  </header>
 
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<section class="sectionOne">
 
+  <div class="boxTwo">
+  <h2>Features</h2>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+
+<div class="boxTwo">
+  <h2>About</h2>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+
+</section>
+
+<img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+<section class="sectionTwo">
+  <div class="boxThree">
+  <h2>Services</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+<div class="boxThree">
+  <h2>Product</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+
+<div class="boxThree">
+  <h2>Vision</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+
+</section>
+
+
+<section class="contact">
   Contact
   123 Way 456 Street
   Somewhere, USA
   1 (888) 888-8888
   sales@greatidea.io
+</section>
 
+<footer class="footer">
   Copyright Great Idea! 2018
-  
+</footer>
   </body>
 </html>
