second update before stand-up

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -35,7 +35,7 @@
       On<br>
       Demand
     </h1>
-    <a class="button">Get Started</a>
+    <a class="button2">Get Started</a>
     </div>
 
 
@@ -81,15 +81,21 @@
 
 
 <section class="contact">
-  Contact
-  123 Way 456 Street
+  <h2>Contact</h2>
+  <address>
+  <div>
+  123 Way 456 Street<br>
   Somewhere, USA
-  1 (888) 888-8888
+  <div>
+    <br>
+  1 (888) 888-8888<br>
+  <br>
   sales@greatidea.io
+</address>
 </section>
 
 <footer class="footer">
-  Copyright Great Idea! 2018
+  <p>Copyright Great Idea! 2018</p>
 </footer>
   </body>
 </html>
