sticky nav and such

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,7 +16,7 @@
 
   <body>
 
-<nav class="navigation">
+<nav id="stickyNav" class="navigation">
   <a class = "button" href="">Services </a>
   <a class = "button" href="">Product</a>
   <a class = "button" href="">Vision</a>
