--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -35,7 +35,7 @@
       On<br>
       Demand
     </h1>
-    <a class="button2">Get Started</a>
+    <button class="button2"><span>Get Started</span></button>
     </div>
 
 
