--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -17,12 +17,12 @@
   <body>
 
 <nav id="stickyNav" class="navigation">
-  <a class = "button" href="">Services </a>
-  <a class = "button" href="">Product</a>
-  <a class = "button" href="">Vision</a>
-  <a class = "button" href="">Features</a>
-  <a class = "button" href="">About</a>
-  <a class = "button" href="">Contact</a>
+  <a class = "button" href="#sectionTwo">Services </a>
+  <a class = "button" href="#sectionTwo">Product</a>
+  <a class = "button" href="#sectionTwo">Vision</a>
+  <a class = "button" href="#sectionOne">Features</a>
+  <a class = "button" href="#sectionOne">About</a>
+  <a class = "button" href="#contact">Contact</a>
 
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
   </nav>
